# set minimum cmake version
cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
include_directories(common)
#add_subdirectory(common)
#add_subdirectory(date_time)
#add_subdirectory(memory)
#add_subdirectory(utility)
#add_subdirectory(string)
#add_subdirectory(test)
#add_subdirectory(container)
#add_subdirectory(algorithm)
#add_subdirectory(math)
#add_subdirectory(os)
#add_subdirectory(function)
add_subdirectory(concurrency)